# team_usecases

./: README.md
CLM/: app.py  config.ini  requirements.txt
CLM/core/: ai_agent.py  certificate_ops.py  database.py  deployment.py  payment.py
CLM/data/: certificates.db
CLM/pages/: 01_Discovery.py  02_Inventory.py  03_Request_Certificate.py  04_Approval_Center.py  05_Payment.py  06_Issuance.py  07_Deployment.py  08_Monitoring.py  09_Renewal.py  10_Revocation.py  11_AI_Assistant.py  12_Temp_Certificate.py
CLM/utils/: config.py  helpers.py
CPCM/: README.md  main.py  main1.py  pyproject.toml
CPCM/data/: dashboard_data.json
CPCM/src/DashBoard/: Home.py
CPCM/src/DashBoard/pages/: Recommendations_Dashboard.py  Server_Specific.py
CPCM/src/agent_orch/: graph_builder.py  graph_builder_anomaly.py  llm_selector.py
CPCM/src/agent_orch/agents/: action_executor.py  alerting.py  anomaly_detector.py  azure_vm_resize.py  base_agent.py  cost_analyzer.py  dashboard_publisher.py  forecasting.py  hyperv_vm_resize.py  metric_collector.py  notification.py  rightsizing.py  scaler_trigger.py
CPCM/src/agent_orch/agents/models/: models.py  models1.py
CPCM/src/agent_orch/apis/: api.py
CPCM/src/agent_orch/utils/: DBConnect.py  config.ini  mydump.sql  notifier.py  queries.txt  servicenow.py  testDB.py
DNS/: Config.ini  app.py  azure_dns.py  config_loader.py  cr_workflow.py  database.py  dns_collector.py  dns_monitor.db-shm  dns_record_manager.py  llm_client.py  local_dns_server.py  main.py  orchestrator.py  remediation_engine.py  requirements.txt  servicenow_client.py
(+15 files in other folders)
