[project]
name = "agent-orch"
version = "0.1.0"
description = ""
authors = [
    {name = "Hari-sys786",email = "harimanie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.6.3,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "openai (>=1.98.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "tensorflow-cpu (>=2.19.0,<3.0.0)",
    "keras (>=3.11.1,<4.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "prophet (>=1.1.7,<2.0.0)",
    "xgboost (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "azure-identity (>=1.25.2,<2.0.0)",
    "azure-mgmt-compute (>=37.2.0,<38.0.0)",
]

[tool.poetry]
packages = [{include = "agent_orch", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
